# rag-mlops

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
services/api/: Dockerfile  requirements.txt
services/api/app/: main.py
services/chat/: chat_service.py  prompt_builder.py
services/ingest/: pdf_reader.py
services/ingest/chunk/: __init__.py  chunker.py  models.py  pager.py  tokenizer.py
services/ingest/embed/: __init__.py  adapters.py  factory.py  interfaces.py  models.py  sbert_embedder.py
services/ingest/index/: __init__.py  qdrant_client.py  schemas.py
services/ingest/normalize/: cleaner.py
services/llm/: openai_compat.py
services/retriever/: __init__.py  models.py  retriever.py
tests/: conftest.py  test_embedder_smoke.py  test_qdrant_upsert_smoke.py  test_retriever_integration.py
