[project]
name = "rag-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pypdf>=6.0.0",
    "pytest>=9.0.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]
